# uni-mesh-clip

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  PLANNING.md  PRP.md  README.md  TASK.md  TROUBLESHOOTING.md  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-windows.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: clipboard.rs  manager.rs  mdns.rs  mod.rs  simple_manager.rs  websocket.rs
src-tauri/src/utils/: crypto.rs
src/components/: DeviceDiscovery.tsx  Settings.tsx  StatusIndicator.tsx
src/types/: index.ts
